--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^18.0.6",
     "@types/react-redux": "^7.1.24",
     "axios": "^0.27.2",
+    "dotenv": "^16.0.1",
     "form-data": "^4.0.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
