--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,19 +1,19 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Meal Plan",
+  "name": "Orange Meal Plan",
   "icons": [
     {
-      "src": "images/LOGO-MAIN.png",
+      "src": "images/logo-64.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "images/LOGO-MAIN.png",
+      "src": "images/logo-192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "images/LOGO-MAIN.png",
+      "src": "images/logo-512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
