--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "chart.js": "^3.8.2",
     "dotenv": "^16.0.1",
     "form-data": "^4.0.0",
+    "framer-motion": "^7.2.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
