--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/devtools": "^4.3.1",
     "@reduxjs/toolkit": "^2.2.7",
+    "@tailwindcss/forms": "^0.5.9",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -22,6 +24,8 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "5.0.1",
+    "redux-persist": "^6.0.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
