--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "bignumber.js": "^9.1.2",
     "dotenv": "^16.0.1",
     "form-data": "^4.0.0",
+    "json-server": "^1.0.0-beta.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.0",
     "react-icons": "^4.4.0",
+    "react-query": "^3.39.3",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "5.0.1",
@@ -35,7 +37,12 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "serve-json-db1": "json-server --watch users.json --port 4000",
+    "serve-json-db2": "json-server --watch ingDb.json --port 4001",
+    "serve-json-db3": "json-server --watch meal.json --port 4002",
+    "serve-json-db4": "json-server --watch mealPlans.json --port 4003",
+    "serve-all": "concurrently \"npm:serve-json-*\""
   },
   "eslintConfig": {
     "extends": [
@@ -69,6 +76,7 @@
     "@storybook/test": "^8.3.3",
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.20",
+    "concurrently": "^9.0.1",
     "eslint-plugin-storybook": "^0.9.0",
     "postcss": "^8.4.47",
     "prop-types": "^15.8.1",
