--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^1.8.3",
+    "@hookform/devtools": "^4.3.1",
+    "@reduxjs/toolkit": "^2.2.7",
+    "@tailwindcss/forms": "^0.5.9",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -11,23 +13,21 @@
     "@types/node": "^16.11.43",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
-    "@types/react-redux": "^7.1.24",
     "axios": "^0.27.2",
-    "chart.js": "^3.8.2",
+    "bignumber.js": "^9.1.2",
     "dotenv": "^16.0.1",
     "form-data": "^4.0.0",
-    "framer-motion": "^7.2.1",
-    "moment": "^2.29.4",
+    "json-server": "^1.0.0-beta.3",
     "react": "^18.2.0",
-    "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.53.0",
     "react-icons": "^4.4.0",
-    "react-redux": "^8.0.2",
+    "react-query": "^3.39.3",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "5.0.1",
-    "redux": "^4.2.0",
-    "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.4.1",
+    "redux-persist": "^6.0.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
@@ -35,12 +35,20 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
+    "serve-json-db1": "json-server --watch users.json --port 4000",
+    "serve-json-db2": "json-server --watch ingDb.json --port 4001",
+    "serve-json-db3": "json-server --watch meal.json --port 4002",
+    "serve-json-db4": "json-server --watch mealPlans.json --port 4003",
+    "serve-all": "concurrently \"npm:serve-json-*\""
   },
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
+      "react-app/jest",
+      "plugin:storybook/recommended"
     ]
   },
   "browserslist": {
@@ -56,6 +64,24 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.3.3"
+    "@chromatic-com/storybook": "^1.9.0",
+    "@storybook/addon-essentials": "^8.3.3",
+    "@storybook/addon-interactions": "^8.3.3",
+    "@storybook/addon-links": "^8.3.3",
+    "@storybook/addon-onboarding": "^8.3.3",
+    "@storybook/blocks": "^8.3.3",
+    "@storybook/preset-create-react-app": "^8.3.3",
+    "@storybook/react": "^8.3.3",
+    "@storybook/react-webpack5": "^8.3.3",
+    "@storybook/test": "^8.3.3",
+    "@types/react-router-dom": "^5.3.3",
+    "autoprefixer": "^10.4.20",
+    "concurrently": "^9.0.1",
+    "eslint-plugin-storybook": "^0.9.0",
+    "postcss": "^8.4.47",
+    "prop-types": "^15.8.1",
+    "storybook": "^8.3.3",
+    "tailwindcss": "^3.4.13",
+    "webpack": "^5.95.0"
   }
 }
